--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,9 @@
     <div style="margin-left: 45%;">
         <h1>เลือกรูป</h1>
         <form action="">
+            <input type="text" id="nameX">
+            <input type="text" id="surnameX">
+            <input type="text" id="numbersX">
             <input type="file" id="img" name="img" accept="image/*"><br><br>
             <button type="button" onclick="con_img()"> convert </button><br><br>
         </form>
@@ -22,9 +25,12 @@
     <script>
         let image = null
         function con_img() {
+            const name = nameX.value
+            const surname = surnameX.value
+            const numbers = numbersX.value
             fetch("http://52.199.168.91:8088/process-image", {
                 method: "POST",
-                body: JSON.stringify({image}),
+                body: JSON.stringify({image, name, surname, numbers}),
                 headers: {
                     'Content-Type': 'application/json'
                 },
