--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,32 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Process</title>
 </head>
 
-<body>
-    <div style="margin-left: 45%;">
-        <h1>เลือกรูป</h1>
-        <form action="">
-            <input type="text" id="nameX">
-            <input type="text" id="surnameX">
-            <input type="text" id="numbersX">
-            <input type="file" id="img" name="img" accept="image/*"><br><br>
-            <button type="button" onclick="con_img()"> convert </button><br><br>
-        </form>
-        <img src="" id="pic" width="200" height="200" />
-        <img src="" id="pro_pic" width="200" height="200" />
+<body style="justify-content: center; display: flex;">
+    <div style="width: 500; height: 500;">
+        <h1 style="text-align: center;">เลือกรูป</h1>
+        <form action="" style="display: flex; justify-content: center;">
+            <input type="file" id="img" name="img" accept="image/*">
+            <button type="button" onclick="con_img()"> convert </button>
+        </form><br>
+        <img src="" id="pic" width="300" height="300" />
+        <img src="" id="pro_pic" width="300" height="300" />
     </div>
 
     <script>
         let image = null
         function con_img() {
-            const name = nameX.value
-            const surname = surnameX.value
-            const numbers = numbersX.value
             fetch("http://52.199.168.91:8088/process-image", {
                 method: "POST",
-                body: JSON.stringify({image, name, surname, numbers}),
+                body: JSON.stringify({image, name: "test", surname: "test", numbers: "test"}),
                 headers: {
                     'Content-Type': 'application/json'
                 },
